# GomokuAI

./: CMakeLists.txt  README.md
include/: AI.h  Board.h  Brain.h  Communication.h  Core.h  IA.h  MonteCarlo.h  Node.h  Point.h  State.h  Timer.h  Tree.h  UCT.h
src/: AI.cpp  Board.cpp  Brain.cpp  Communication.cpp  Core.cpp  IA.cpp  MonteCarlo.cpp  Node.cpp  State.cpp  Timer.cpp  Tree.cpp  UCT.cpp  main.cpp
